[tool.poetry]
name = "event-fold"
version = "0.1.0"
description = ""
authors = ["michaelrauh <michaelrauh@ymail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pymongo = "^4.0"
mtools = "^1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
